fix too small sliders icon on mobile bug

--- a/src/components/DictionaryPage/TopBar/SearchBar/SearchBar.module.sass
+++ b/src/components/DictionaryPage/TopBar/SearchBar/SearchBar.module.sass
@@ -1,6 +1,6 @@
 .searchBar
     max-width: 37rem
-    min-width: 20rem
+    min-width: 10rem
     width: 100%
     height: 2.5rem
 
@@ -11,6 +11,7 @@
     display: flex
     justify-content: space-evenly
     flex-direction: row
+    flex-grow: 1
     flex-shrink: 2
 
     margin-right: auto
@@ -18,7 +19,7 @@
 
     input
         all: unset
-        width: 30rem
+        width: 100%
 
         font-size: 1.2rem
         font-weight: 300
@@ -27,14 +28,10 @@
 
         float: left
 
-    hr
-        all: unset
-        transform: scale(0.7)
-
 .searchIcon
-    flex-grow: 1
 
     min-width: 2.5rem
+    max-width: 2.5rem
     height: 2.5rem
 
     display: flex
@@ -53,12 +50,13 @@
 
 
 .filter
+    min-width: 2.5rem
+    max-width: 2.5rem
+    height: 2.5rem
+
     display: flex
     justify-content: space-around
-    flex-grow: 1
 
-
-    float: left
     cursor: pointer
     user-select: none
 
@@ -66,7 +64,11 @@
         width: 1rem
         transition: 200ms
 
+    hr
+        all: unset
+        border-left: 1px solid
 
+        transform: scale(0.8)
 
 .filterContainer
     min-width: 2.5rem
